--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bonik-shop",
+  "name": "RitaStore",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icon": "^1.0.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.0",
